--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "framer-motion": "^12.23.24",
     "mongoose": "^8.19.2",
     "next": "16.0.0",
     "react": "19.2.0",
